add database layer
